examples/errors/music/unclosed_chord.abc
X:1
T:Unclosed Chord
K:C
% M001: Missing ]
[CEG CDEF|
